--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,9 +6,12 @@ spring:
     console:
       enabled: false
   datasource:
-    url: jdbc:h2:file:./customers
+    url: jdbc:h2:file:./customers;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false;
     driverClassName: org.h2.Driver
     username: sa
     password: password
   jpa:
+    show-sql: true
     database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
