Pass createEmployer Test case

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,8 +18,7 @@ spring:
   kafka:
     bootstrap-servers: kafka-release.emmet-brown.svc.cluster.local:9092
     retries: 1
-    batch:
-      size: 1
+    batch-size: 1
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
